CLIENT|Add player info

--- a/src/styling.less
+++ b/src/styling.less
@@ -10,3 +10,14 @@
 .player-button {
   background-color: #00dae0;
 }
+
+#next-button {
+  background-color: grey;
+  bottom: 20px;
+  width: 200px;
+  display: inline;
+  position: absolute;
+  & .label {
+    padding: 5px;
+  }
+}
